--- a/index.html
+++ b/index.html
@@ -54,23 +54,23 @@
         <div class="footer-header" style="margin-bottom:2rem">Get in touch</div>
           <ul class="list-non-bullet" style="margin-bottom:2rem">
           <li class="list-item-inline">
-            <a class="links" href="https://www.linkedin.com/in/usha-bg-002734192" target="blank">
+            <a class="link" href="https://www.linkedin.com/in/usha-bg-002734192" target="blank">
               <img src="img/linkedin.svg" alt="linkedin" class="footer-icon" />
             </a>
           </li>
           <li class="list-item-inline">
-            <a class="links" href="https://github.com/UshaGururaj" target="blank">
+            <a class="link" href="https://github.com/UshaGururaj" target="blank">
               <img src="img/git.svg" alt="github" class="footer-icon"/>
             </a>
           </li>
           <li class="list-item-inline">
-            <a class="links" href="https://twitter.com/UshaBG1" target="blank">
+            <a class="link" href="https://twitter.com/UshaBG1" target="blank">
               <img src="img/tweet.svg" alt="twitter" class="footer-icon"/>
             </a>
           </li>
           <li class="list-item-inline">
             <a
-              class="links"
+              class="link"
               href="https://instagram.com/usha_g_raj"
               target="blank"
             >
