--- a/projects.html
+++ b/projects.html
@@ -82,7 +82,7 @@
                 <!-- <a class="link link-primary" href="https://sxigc.csb.app/">Try this</a> https://wg3dh.csb.app/-->
                 <!-- <a class="link link-secondary" href="https://codesandbox.io/s/goodsongstolisten-sxigc?file=/src/App.js">View source</a> -->
                 <a class="link link-primary" href="https://wg3dh.csb.app/">Live Demo</a>
-                <a class="link link-secondary" href="https://codesandbox.io/s/goodsongstolistenmobile-wg3dh?file=/src/App.js">View source</a>
+                <a class="link link-secondary" href="https://github.com/UshaGururaj/songs-recommender">View source</a>
             </div>    
         </li>
         <li>
@@ -91,7 +91,7 @@
                 <small>August,2021</small>
                 <p>Are you strugling to find <strong>Emoji </strong>meanings? Click on or enter emoji and know what it means.</p>
                 <a class="link link-primary" href="https://nyqg3.csb.app/">Live Demo</a>
-                <a class="link link-secondary" href="https://codesandbox.io/s/emojiinterpreter-in-two-ways-nyqg3?file=/src/App.js">View source</a>
+                <a class="link link-secondary" href="https://github.com/UshaGururaj/emoji-interpreter">View source</a>
             </div>    
         </li>
         <li>
@@ -116,7 +116,7 @@
             <div class="list-showcase container-card">
                 <h1>Are you a RCB Fan?</h1>
                 <small>August,2021</small>
-                <p>A CLI app built with <strong>node.js</strong>. You can send this to your friends and find out who really knows you.</p>
+                <p>A CLI app built with <strong>node.js</strong>. You can send this to your friends and find out who knows well about RCB.</p>
                 <a class="link link-primary" href="https://replit.com/@UshaGururaj/AssignmentQuiz2?embed=true#index.js">Live Demo</a>
                 <a class="link link-secondary" href="https://github.com/UshaGururaj/week1Assignment2">View source</a>
             </div>    
